--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>SkeletonPlus</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="dist/css/app.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.rawgit.com/MrDragonXM15/SkeletonPlus/master/dist/css/app.min.css" />
 </head>
 <body>
   <div class="container" style="margin-top: 150px;">
@@ -13,7 +13,7 @@
     <p>
       A little framework build with <a rel="noopener noreferrer" target="_blank" href="http://getskeleton.com"><i class="fa fa-css3"></i> Skeleton</a>, <a rel="noopener noreferrer" target="_blank" href="https://necolas.github.io/normalize.css/"><i class="fa fa-css3"></i> Normalize.css</a> and <a rel="noopener noreferrer" target="_blank" href="https://forkawesome.github.io/"><i class="fa fa-fork-awesome"></i> Normalize.css</a>
     </p>
-    <p>You can found the documentation here : <a rel="noopener noreferrer" target="_blank" href="#">https://lucasalt.fr/SkeletonPlus/fr/</a></p>
+    <!-- <p>You can found the documentation here : <a rel="noopener noreferrer" target="_blank" href="#">https://lucasalt.fr/SkeletonPlus/fr/</a></p> -->
   </div>
 </body>
 </html>
