add a little description

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </div>
     <div class="ten columns"style="border-left: #E1E1E1 1px solid; padding: 30px 0">
       <div class="container">
+        <h2>SkeletonPlus</h2>
+        <p>A small starterpack using skeleton, normalize.css and fork awesome. You will only find the documentation of the modules I added. To learn more and find out more about skeleton, go here</p>
         <!-- Status -->
         <div>
           <h3 id="statusbar">Status Bar</h3>
@@ -167,7 +169,7 @@
         <!-- Social media -->
         <div>
           <h3 id="socialicon">Social Icons</h3>
-          <p>Some Fork Awesome icons are colored by me. The list of coloured icons is below. Don't hesitate to clone the repository to help me color others. It's very simple to use because the color is automatically applied on the icon. You can found all icons <a rel="noopener noreferrer" href="https://forkawesome.github.io/Fork-Awesome/" target="_blank"> here</a>.</p>
+          <p>Some Fork Awesome icons are colored by me. The list of coloured icons is below. Don't hesitate to clone the repository to help me color others. It's very simple to use because the color is automatically applied on the icon. You can find all icons <a rel="noopener noreferrer" href="https://forkawesome.github.io/Fork-Awesome/" target="_blank"> here</a>.</p>
           <xmp style="margin-top: -20px;">
 <i class"fa fa-reddit"></i>
           </xmp>
