--- a/test.html
+++ b/test.html
@@ -44,8 +44,8 @@
           </div>
         </div>
         <div class="four columns">
-            <div style="margin-bottom: 10px;" class="status success"><i class="fa fa-check"></i>fa fa-check</div>
-            <div style="margin-bottom: 10px;" class="status primary"><i class="fa fa-check"></i>fa fa-check</div>
+            <div style="margin-bottom: 10px;" class="status status-rounded success"><i class="fa fa-check"></i>fa fa-check</div>
+            <div style="margin-bottom: 10px;" class="status status-rounded primary"><i class="fa fa-check"></i>fa fa-check</div>
             <div style="margin-bottom: 10px;" class="status warning"><i class="fa fa-check"></i>fa fa-check</div>
             <div class="status error"><i class="fa fa-check"></i>fa fa-check</div>
         </div>
